tests/neg/i16146.scala

type N = [X] => (X => X) => X => X
val exp = (a: N) => (b: N) => b(a) // error
